<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="media_title">Media</string>
    <string name="media_art_content_description">Album artwork</string>
    <string name="media_previous">Previous</string>
    <string name="media_play">Play</string>
    <string name="media_pause">Pause</string>
    <string name="media_next">Next</string>
    <string name="media_source_button">Media sources</string>
    <string name="open_media_center">Media center</string>
    <string name="media_queue">Queue</string>
    <string name="media_history">History</string>
    <string name="media_actions">Actions</string>
    <string name="media_no_source">No media source</string>
    <string name="media_nothing_playing">Nothing playing</string>
    <string name="media_choose_source">Choose a media source to begin</string>
    <string name="open_apps">Apps</string>
    <string name="retry_navigation">Retry navigation</string>
    <string name="task_loading">Loading embedded task…</string>
    <string name="app_grid_title">Apps</string>
    <string name="app_search_hint">Search applications</string>
    <string name="app_grid_empty">No applications available</string>
    <string name="navigation">Navigation</string>
    <string name="close">Close</string>
    <string name="app_disabled_not_distraction_optimized">Unavailable while driving.</string>
    <string name="app_disabled_safety_service">Waiting for the vehicle safety service.</string>
    <string name="recents_remove">Remove</string>
    <string name="call_in_progress">Call in progress</string>
    <string name="call_state">%1$s call</string>
    <string name="call_mute">Mute</string>
    <string name="call_end">End</string>
    <string name="call_dialpad">Dialpad</string>
    <string name="call_ongoing">Ongoing call</string>
    <string name="call_dialing">Dialing…</string>
    <string name="call_duration_separator"> • </string>
    <plurals name="projection_devices">
        <item quantity="one">%d device</item>
        <item quantity="other">%d devices</item>
    </plurals>
</resources>
