<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp">

    <TextView
        android:id="@+id/app_grid_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/app_grid_title"
        android:textColor="@color/launcher_text_primary"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/app_grid_close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/app_grid_close"
        style="@style/LauncherActionButton"
        android:text="@string/close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/app_search"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/launcher_search_background"
        android:hint="@string/app_search_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingHorizontal="20dp"
        android:singleLine="true"
        android:textColor="@color/launcher_text_primary"
        android:textColorHint="@color/launcher_text_secondary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_grid_title" />

    <TextView
        android:id="@+id/app_navigation"
        style="@style/LauncherNavigationTile"
        android:layout_marginTop="20dp"
        android:text="@string/navigation"
        app:layout_constraintEnd_toStartOf="@id/app_grid"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_search" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/app_grid"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:clipToPadding="false"
        android:paddingBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/app_navigation"
        app:layout_constraintTop_toBottomOf="@id/app_search" />

    <TextView
        android:id="@+id/app_grid_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_grid_empty"
        android:textColor="@color/launcher_text_secondary"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/app_grid"
        app:layout_constraintEnd_toEndOf="@id/app_grid"
        app:layout_constraintStart_toStartOf="@id/app_grid"
        app:layout_constraintTop_toTopOf="@id/app_grid" />
</androidx.constraintlayout.widget.ConstraintLayout>
